Bug 437419 - External Tools variables self-populating
Summary: External Tools variables self-populating
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.0
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-20 15:40 UTC by Tony Dunn
Modified: 2021-09-02 12:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments
UI examples where fields appear spuriously populated (72.92 KB, application/zip)
2021-05-20 15:40 UTC, Tony Dunn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony Dunn 2021-05-20 15:40:01 UTC
Created attachment 138618 [details]
UI examples where fields appear spuriously populated

SUMMARY

Created an entry in External Tools to cat a file out, and insert at cursor point. On creation, the dialogue has (at user's choice) *no* variables for fields (1) input or (2) working directory or (3) Mime types. On running or trying to run the External Tools command created, the option is often greyed out.

On checking the command created, the fields for input, working directory, and Mime types has data added for variables, such as  %{Document:Selection:Text}, %{Document:Path}, and text/x-qml. The Mime type particularly causes the grey-out when the file being edited does not match the Mime type (say Markdown file and Mime type of text/x-qml), which is correct expected behavior.

If the Mime type matches the file type of the file being edited, the command can be executed, but the variable  %{Document:Selection:Text} is ignored possibly as irrelevant, as the command was typically a system command such as 'ls' or 'echo'.


STEPS TO REPRODUCE
1. Create a new entry in the External Tools, ensure no variable data in input, working directory, Mime type, save and exit.
2. Try to run command. Frequently fails.
3. Check/edit command in External Tools for variable data in fields input, working directory, Mime types. Data has been added, which may cause the command to be not executable.

OBSERVED RESULT

Where file type of file being edited does not match Mime type spuriously added by the program, command can not be executed. Adding a Mime type which matches file type being edited allows command to be executed.

EXPECTED RESULT

Fields for input, working directory, and Mime type should remain empty as per when the user creates and saves the command in External Tools.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux 10
KDE Plasma Version: 5.14.5
Qt Version: 5.11.3
KDE Frameworks Version: 5.54.0
Kernel Version: 4.19.0-16-amd64
OS Type: 64-bit
Processors: 4 × Intel® Core™ i3-2348M CPU @ 2.30GHz
Memory: 7.6 GiB of RAM

ADDITIONAL INFORMATION

Some more info and screen shots here:

https://www.reddit.com/r/kde/comments/ng91mn/variables_in_external_tools_with_kate/

See also attachments for UI illustration.
Comment 1 Christopher Yeleighton 2021-08-29 16:04:30 UTC
I have a different result, as of v21.08.0:
Name=Bug 437419
Executable=true
Arguments:=-r %{Document:Path}
Editor command:=git-cola
Category:=Git

:= means an initially empty value has been filled with WTF.
Other parameters are empty.

Those bogus values return after erasing and saving the tool parameters.
When I set them to "empty", they value persists.
When I erase it and save, the value "empty" returns.
Comment 2 Christopher Yeleighton 2021-08-29 16:12:27 UTC
Arguments= (space) works though.  It seems the Editor command must be filled, it does not matter with what unless you want to actually use it as a command.
Comment 3 Christopher Yeleighton 2021-08-29 16:37:48 UTC
(In reply to Christopher Yeleighton from comment #1)
> Arguments:=-r %{Document:Path}
> Editor command:=git-cola
> Category:=Git

These things get borrowed from [Tool 0].
Comment 4 Dominik Haumann 2021-08-30 11:23:46 UTC
Did you find the location in the code for this misbehavior already? That would be great!
Comment 5 Christopher Yeleighton 2021-08-30 11:29:57 UTC
Unfortunately, everything in the code looks quite normal.  Additionally, gdb is giving me a hard time:

(gdb) info symbol KateExternalToolsConfigWidget::editTool
KateExternalToolsConfigWidget::editTool(KateExternalTool*) in section .text of /usr/lib64/qt5/plugins/ktexteditor/externaltoolsplugin.so

(gdb) info symbol KateExternalTool::save
There is no field named save
Comment 6 Christopher Yeleighton 2021-08-30 14:07:59 UTC
(In reply to Dominik Haumann from comment #4)
> Did you find the location in the code for this misbehavior already? That
> would be great!

The arguments are empty upon return from editTool.
Still empty when added to QStandardItem.
Still empty when being saved at apply.

Breakpoint 9 at 0x7f6a7b468a94: file /usr/src/debug/kate-21.08.0-1.1.x86_64/addons/externaltools/kateexternaltool.cpp, line 129.

Still empty when passed to writeStringEntry by KateExternalTool::save.

However, m_config [Tool 0] .arguments is compromised at this point:

350         m_config->sync();

Continue to investigate.
Comment 7 Christopher Yeleighton 2021-08-30 14:12:04 UTC
I think we should replace the entry [Tool 0] with [tool hash] to avoid old values hanging around.
Comment 8 Christopher Yeleighton 2021-08-30 14:19:13 UTC
This also means that a tool must have a category specified before saving.  Currently any new tool is processed first because its category is empty, which means it ends up in the first category (in my case category Git), which is unwanted and unexpected.  Again, the way to do it is to add the category as a required selector in the tool editor widget.
Comment 9 Christopher Yeleighton 2021-08-30 14:21:52 UTC
I also think that setting a configuration property to an empty string is a bad idea; such a property should not be stored at all.
Comment 10 Dominik Haumann 2021-08-31 22:40:07 UTC
I think the code is fine as is. But indeed before writing the config file it needs to be cleared before. Maybe that is missing?

In any case, nice catch. I also once looked into this and wasn't able to quickly find the cause for this.
Comment 11 Dominik Haumann 2021-09-01 07:26:15 UTC
I think I added the regression by accident here:
https://invent.kde.org/utilities/kate/-/commit/372485eb165aa6a58e122dd927e5d4660e9025c1

What is missing is to first remove the section before writing it only partially.

Would be very good, if someone could provide a fix!
Comment 12 Christopher Yeleighton 2021-09-01 07:31:36 UTC
Do you mean "to remove the group"?
Comment 13 Christopher Yeleighton 2021-09-01 07:36:36 UTC
(In reply to Dominik Haumann from comment #11)
> I think I added the regression by accident here:
> https://invent.kde.org/utilities/kate/-/commit/
> 372485eb165aa6a58e122dd927e5d4660e9025c1

Also, "writeStringEntry" is a hell of a name.  It should be renamed to "writeStringEntryMaybe".
Comment 14 Bug Janitor Service 2021-09-01 16:08:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/480
Comment 15 Christoph Cullmann 2021-09-02 11:24:05 UTC
Git commit fabd4630efd729d5a9df62a433c8f4949b3f4add by Christoph Cullmann, on behalf of Christopher Yeleighton.
Committed on 02/09/2021 at 11:24.
Pushed by cullmann into branch 'master'.

Delete unfilled entries in tool config group

M  +19   -16   addons/externaltools/kateexternaltool.cpp

https://invent.kde.org/utilities/kate/commit/fabd4630efd729d5a9df62a433c8f4949b3f4add