Delete unfilled entries in tool config group

BUG: 437419